--- a/pyproject.toml
+++ b/pyproject.toml
@@ -173,6 +173,7 @@ markers = [
     "slow: marks tests as slow",
 ]
 typeguard-forward-ref-policy = "ERROR"
+typeguard-collection-check-strategy = "ALL_ITEMS"
 
 [tool.tox]
 env_list = [
