--- a/tests/static/test-annotations.yml
+++ b/tests/static/test-annotations.yml
@@ -1,5 +1,9 @@
 # Test functions with lxml type annotations.
-- case: annaotate_element
+# There are two copies of each test:
+# One with the private _Element and _ElementTree.
+# One with the public Element and ElementTree.
+
+- case: annaotate_element_private
   main: |
     from lxml import etree as e
 
@@ -11,7 +15,7 @@
         el = e.Element("test")
         view_element(el)
 
-- case: annaotate_tree
+- case: annaotate_tree_private
   main: |
     from lxml import etree as e
 
@@ -29,7 +33,7 @@
         tree = e.ElementTree(el)
         tree_root(tree)
 
-- case: annaotate_comment
+- case: annaotate_comment_private
   main: |
     from lxml import etree as e
 
@@ -50,7 +54,7 @@
     print(comm.tag == e.Comment)
     check_if_element_is_comment(comm)
 
-- case: annaotate_html
+- case: annaotate_html_private
   main: |
     from lxml import etree as e
     from lxml import html as h
@@ -62,4 +66,69 @@
         element_tree(et)
 
     def element_tree_not_html(et: e._ElementTree[e._Element]) -> None:
+        html_tree(et)  # E: Argument 1 to "html_tree" has incompatible type "_ElementTree[_Element]"; expected "_ElementTree[HtmlElement]"  [arg-type]
+
+- case: annaotate_element_public
+  main: |
+    from lxml import etree as e
+
+    def view_element(el: e.Element) -> None:
+        reveal_type(el)  # N: Revealed type is "lxml.etree._element._Element"
+        assert isinstance(e, e.Element)
+
+    def call_view_element() -> None:
+        el = e.Element("test")
+        view_element(el)
+
+- case: annaotate_tree_public
+  main: |
+    from lxml import etree as e
+
+    def tree_root(tree: e.ElementTree[e.Element]) -> None:
+        el = tree.getroot()
+        reveal_type(el)  # N: Revealed type is "lxml.etree._element._Element"
+
+    def tree_is_generic(et: e.ElementTree) -> None:
+        pass
+
+    def tree_of_int(et: e.ElementTree[int]) -> None:  # E: Type argument "int" of "_ElementTree" must be a subtype of "_Element"  [type-var]
+        pass
+
+    def get_tree(el: e.Element) -> None:
+        tree = e.ElementTree(el)
+        tree_root(tree)
+
+- case: annaotate_comment_public
+  main: |
+    from lxml import etree as e
+
+    def get_element(el: e.Element) -> None:
+        reveal_type(el.tag)  # NR: .+ "Union\[[\w\.]+\.str, [\w\.]+\.bytes, [\w\.]+\.bytearray, [\w\.]+\.QName\]"
+
+    def get_comment(comm: e._Comment) -> None:
+        reveal_type(comm)  # NR: .+ "[\w\.]+\._Comment"
+        reveal_type(comm.tag)  # NR: .+ "def \(.+\) -> [\w\.]+\._Comment"
+        get_element(comm)
+
+    def check_if_element_is_comment(el: e.Element) -> bool:
+        # The following should not be an error.
+        # It is a valid check that an element is a comment.
+        return el.tag == e.Comment
+
+    comm = e.Comment("comment")
+    print(comm.tag == e.Comment)
+    check_if_element_is_comment(comm)
+
+- case: annaotate_html_public
+  main: |
+    from lxml import etree as e
+    from lxml import html as h
+
+    def element_tree(et: e.ElementTree[e.Element]) -> None:
+        pass
+
+    def html_tree(et: e.ElementTree[h.HtmlElement]) -> None:
+        element_tree(et)
+
+    def element_tree_not_html(et: e.ElementTree[e.Element]) -> None:
         html_tree(et)  # E: Argument 1 to "html_tree" has incompatible type "_ElementTree[_Element]"; expected "_ElementTree[HtmlElement]"  [arg-type]
