test: Disable warning about bool(element) usage
This warning was enacted for 15y+ but never happened, and we need this usage for succinct filtering of some hypothesis tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -177,6 +177,9 @@ addopts = [
 markers = [
     "slow: marks tests as slow",
 ]
+filterwarnings = [
+    'ignore:Truth-testing of elements was .+:FutureWarning',
+]
 
 [tool.tox]
 env_list = [
