--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ stub-test = [
 rt-test = [
     "beautifulsoup4 == 4.12.3",
     "html5lib == 1.1",
+    "pook == 2.1.3",
+    "urllib3 == 2.3.0",
     "hypothesis[zoneinfo] == 6.124.9",
     "pytest-revealtype-injector >= 0.3",
     {include-group = "pyright"},
@@ -78,6 +80,8 @@ dev = [
     # microsoft/pyright#9286, microsoft/pyright#9296, microsoft/pyright#9412
     'pyright >= 1.1.389',
     'html5lib == 1.1',
+    'pook >= 2.0',
+    'urllib3 >= 2.0',
     'pytest-mypy-plugins >= 2.0',
     'pytest-revealtype-injector >= 0.3',
     'lxml >= 4.9',
