--- a/tests/runtime/mypy.ini
+++ b/tests/runtime/mypy.ini
@@ -3,6 +3,9 @@ strict = True
 pretty = False
 warn_unused_ignores = False
 
+# Pook has no annotation
+ignore_missing_imports = True
+
 # Some error codes are so frequently emitted by mypy
 # that it is more convenient to disable globally.
 #
