--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,6 +183,8 @@ markers = [
 ]
 filterwarnings = [
     'ignore:Truth-testing of elements was .+:FutureWarning',
+    "ignore:NotImplemented should not be used in a boolean context:DeprecationWarning",
+    "ignore:The 'strip_cdata' option of HTMLParser.+:DeprecationWarning",
 ]
 
 [tool.tox]
