--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ requires-python = '>=3.8'
 license = 'Apache-2.0'
 license-files = ['LICENSE']
 dependencies = [
-    'types-beautifulsoup4 ~= 4.12',
     'typing_extensions ~= 4.10; python_version < "3.13"',
-    'cssselect ~= 1.2'  # cssselect uses inline annotation
+    'cssselect ~= 1.2',  # inline annotation
+    'beautifulsoup4 ~= 4.13',  # inline annotation
 ]
 keywords = ['lxml', 'typing', 'stubs', 'annotation']
 authors = [
@@ -46,9 +46,10 @@ pyright = ['pyright >= 1.1.351']
 # mostly pinned for tox testing except dev group
 [dependency-groups]
 basic = [
-    "types-beautifulsoup4 == 4.12.0.20241020",
+    "types-html5lib ~= 1.1.11",
     "typing_extensions == 4.12.2; python_version < '3.13'",
     "cssselect == 1.2.0",
+    "beautifulsoup4 == 4.13.3",
 ]
 mypy    = ["mypy == 1.11.2"]
 pyright = [
@@ -62,7 +63,6 @@ stub-test = [
     {include-group = "mypy"},
 ]
 rt-test = [
-    "beautifulsoup4 == 4.12.3",
     "html5lib == 1.1",
     "pook == 2.1.3",
     "urllib3 == 2.3.0",
@@ -79,13 +79,13 @@ dev = [
     'tox ~= 4.22',
     # microsoft/pyright#9286, microsoft/pyright#9296, microsoft/pyright#9412
     'pyright >= 1.1.389',
+    'beautifulsoup4 ~= 4.13',
     'html5lib == 1.1',
     'pook >= 2.0',
     'urllib3 >= 2.0',
     'pytest-mypy-plugins >= 2.0',
     'pytest-revealtype-injector >= 0.3',
     'lxml >= 4.9',
-    'beautifulsoup4 ~= 4.8',
     'hypothesis[zoneinfo] >6.0,<6.125',  # typecheck problem in 6.125
 ]
 
@@ -270,7 +270,7 @@ pass_env = [
 ]
 package = 'wheel'
 wheel_build_env = '{package_env}'
-dependency_groups = ['stub-test']
+dependency_groups = ['basic', 'stub-test']
 commands = [[
     'pytest',
     '--mypy-ini-file=tests/static/mypy-pytest.ini',
@@ -291,19 +291,19 @@ commands = [[
 ]]
 
 [tool.tox._env_lxml49]
-dependency_groups = ['rt-test', 'lxml49']
+dependency_groups = ['basic', 'rt-test', 'lxml49']
 
 [tool.tox._env_lxml50]
-dependency_groups = ['rt-test', 'lxml50']
+dependency_groups = ['basic', 'rt-test', 'lxml50']
 
 [tool.tox._env_lxml51]
-dependency_groups = ['rt-test', 'lxml51']
+dependency_groups = ['basic', 'rt-test', 'lxml51']
 
 [tool.tox._env_lxml52]
-dependency_groups = ['rt-test', 'lxml52']
+dependency_groups = ['basic', 'rt-test', 'lxml52']
 
 [tool.tox._env_lxml53]
-dependency_groups = ['rt-test', 'lxml53']
+dependency_groups = ['basic', 'rt-test', 'lxml53']
 
 [tool.tox.env]
 py38-stub  = {base = ['_env_stub']}
