--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -141,3 +141,81 @@ jobs:
           version: ${{ matrix.prver }}
           python-path: .venv/bin/python
           extra-args: src
+
+
+  basedpyright_compat:
+    strategy:
+      fail-fast: false
+      matrix:
+        bpr-ver:
+          - '1.20.0'
+          - '1.21.0'
+          - '1.21.1'
+          - '1.22.0'
+          - '1.22.1'
+          - '1.23.0'
+          - '1.23.1'
+          - '1.23.2'
+          - '1.24.0'
+          - '1.25.0'
+          - '1.26.0'
+          - '1.27.0'
+          - '1.27.1'
+          - '1.28.0'
+          - '1.28.1'
+    runs-on: 'ubuntu-24.04'
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install prerequisite node modules
+        run: npm install 'smol-toml@1.3.1'
+
+      - name: Generate pyright config
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const toml = require('smol-toml');
+
+            fs.readFile('pyproject.toml', 'utf-8', (err, data) => {
+              if (err) {
+                console.error('Error reading pyproject.toml:', err);
+                process.exit(1);
+              }
+
+              const config = toml.parse(data);
+              const outData = JSON.stringify(config.tool.pyright, null, 2)
+
+              fs.writeFile('pyrightconfig.json', outData, (err) => {
+                if (err) {
+                  console.error('Error writing pyrightconfig.json:', err);
+                  process.exit(1);
+                }
+                core.startGroup('Data written to pyrightconfig.json');
+                console.log(outData);
+                core.endGroup();
+              });
+            });
+
+      - uses: astral-sh/setup-uv@v5
+        with:
+          version: '0.6.2'
+          cache-dependency-glob: |
+            ./pyproject.toml
+
+      - name: Install prerequisite python packages
+        run: |
+          uv venv -p 3.12 --python-preference only-managed
+          uv pip install -r pyproject.toml
+          uv pip install "basedpyright==${{ matrix.bpr-ver }}"
+
+      - name: Run basedpyright
+        run: >
+          .venv/bin/basedpyright
+          --config pyrightconfig.json
+          --level error
+          src
