--- a/.github/workflows/compat.yml
+++ b/.github/workflows/compat.yml
@@ -9,17 +9,17 @@ jobs:
       fail-fast: false
       matrix:
         myver:
-          - 1.10.0
-          - 1.10.1
-          - 1.11.0
-          - 1.11.1
-          - 1.11.2
-          - 1.12.0
-          - 1.12.1
-          - 1.13.0
-          - 1.14.0
-          - 1.14.1
-          - 1.15.0
+          - '1.15.0'
+          - '1.14.1'
+          - '1.14.0'
+          - '1.13.0'
+          - '1.12.1'
+          - '1.12.0'
+          - '1.11.2'
+          - '1.11.1'
+          - '1.11.0'
+          - '1.10.1'
+          - '1.10.0'
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
@@ -46,7 +46,6 @@ jobs:
       fail-fast: false
       matrix:
         prver:
-          - 1.1.350
           - 1.1.351
           - 1.1.352
           - 1.1.353
@@ -118,14 +117,16 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: npm install js-toml
+
+      - name: Install prerequisite node modules
+        run: npm install 'smol-toml@1.3.1'
 
       - name: Generate pyright config
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
-            const toml = require('js-toml');
+            const toml = require('smol-toml');
 
             fs.readFile('pyproject.toml', 'utf-8', (err, data) => {
               if (err) {
@@ -133,7 +134,7 @@ jobs:
                 process.exit(1);
               }
 
-              const config = toml.load(data);
+              const config = toml.parse(data);
               const outData = JSON.stringify(config.tool.pyright, null, 2)
 
               fs.writeFile('pyrightconfig.json', outData, (err) => {
@@ -159,21 +160,65 @@ jobs:
       fail-fast: false
       matrix:
         bpr-ver:
-          - '1.20.0'
-          - '1.21.0'
-          - '1.21.1'
-          - '1.22.0'
-          - '1.22.1'
-          - '1.23.0'
-          - '1.23.1'
-          - '1.23.2'
-          - '1.24.0'
-          - '1.25.0'
-          - '1.26.0'
-          - '1.27.0'
-          - '1.27.1'
-          - '1.28.0'
           - '1.28.1'
+          - '1.28.0'
+          - '1.27.1'
+          - '1.27.0'
+          - '1.26.0'
+          - '1.25.0'
+          - '1.24.0'
+          - '1.23.2'
+          - '1.23.1'
+          - '1.23.0'
+          - '1.22.1'
+          - '1.22.0'
+          - '1.21.1'
+          - '1.21.0'
+          - '1.20.0'
+          - '1.19.1'
+          - '1.19.0'
+          - '1.18.4'
+          - '1.18.3'
+          - '1.18.2'
+          - '1.18.1'
+          - '1.18.0'
+          - '1.17.5'
+          - '1.17.4'
+          - '1.17.3'
+          - '1.17.2'
+          - '1.17.1'
+          - '1.17.0'
+          - '1.16.0'
+          - '1.15.2'
+          - '1.15.1'
+          - '1.15.0'
+          - '1.14.0'
+          - '1.13.3'
+          - '1.13.2'
+          - '1.13.1'
+          - '1.13.0'
+          - '1.12.6'
+          - '1.12.5'
+          - '1.12.4'
+          - '1.12.3'
+          - '1.12.2'
+          - '1.12.1'
+          - '1.12.0'
+          - '1.11.0'
+          - '1.10.4'
+          - '1.10.3'
+          - '1.10.2'
+          - '1.10.1'
+          - '1.10.0'
+          - '1.9.1'
+          - '1.9.0'
+          - '1.8.0'
+          - '1.7.0'
+          - '1.6.1'
+          - '1.6.0'
+          - '1.5.0'
+          - '1.4.0'
+
     runs-on: 'ubuntu-24.04'
     steps:
       - uses: actions/checkout@v4
@@ -225,7 +270,6 @@ jobs:
           uv pip install "basedpyright==${{ matrix.bpr-ver }}"
 
       - name: Run basedpyright
-        run: >
-          .venv/bin/basedpyright
-          --level error
-          src
+        run: |
+          source .venv/bin/activate
+          basedpyright --level error src
