--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,20 +55,23 @@ basic = [
 mypy    = ["mypy == 1.11.2"]
 pyright = [
     # RobertCraigie/pyright-python/#318
-    "pyright == 1.1.394",
+    "pyright == 1.1.396",
+    # 1.28 broke hypothesis the same way pyright 1.1.395 did
     "basedpyright == 1.27.1",
 ]
 format  = ["ruff ~= 0.6"]
 stub-test = [
-    "pytest-mypy-plugins == 3.1.2",
+    "pytest-mypy-plugins ~= 3.2; python_version > '3.8'",
+    "pytest-mypy-plugins == 3.1.2; python_version <= '3.8'",
     {include-group = "mypy"},
 ]
 rt-test = [
     "html5lib == 1.1",
     "pook == 2.1.3",
     "urllib3 == 2.3.0",
-    "hypothesis[zoneinfo] == 6.124.9",
-    "pytest-revealtype-injector >= 0.3",
+    "hypothesis[zoneinfo] == 6.127.7",  # HypothesisWorks/hypothesis#4269
+    "pytest-revealtype-injector == 0.4.1",
+    {include-group = "mypy"},
     {include-group = "pyright"},
 ]
 lxml49 = ["lxml == 4.9.4"]
@@ -78,16 +81,17 @@ lxml52 = ["lxml == 5.2.2"]
 lxml53 = ["lxml == 5.3.1"]
 dev = [
     'tox ~= 4.22',
-    # microsoft/pyright#9286, microsoft/pyright#9296, microsoft/pyright#9412
-    'pyright >= 1.1.389',
-    'beautifulsoup4 ~= 4.13',
+    # microsoft/pyright#9412, microsoft/pyright#9984
+    'pyright >=1.1.389,!=1.1.395',
     'html5lib == 1.1',
     'pook >= 2.0',
     'urllib3 >= 2.0',
     'pytest-mypy-plugins >= 2.0',
-    'pytest-revealtype-injector >= 0.3',
+    'pytest-revealtype-injector >= 0.4.1',
     'lxml >= 4.9',
-    'hypothesis[zoneinfo] >6.0,<6.125',  # typecheck problem in 6.125
+    'hypothesis[zoneinfo] >= 6.127.7',
+    {include-group = "format"},
+    {include-group = "basic"},
 ]
 
 [tool.pdm.version]
@@ -233,7 +237,8 @@ runtime = [
 # its own string processing when parsing config,
 # therefore works even when migrating tox config
 # to TOML. Beware that tox-gh-actions version
-# must be hardcoded to 3.2.0
+# must be hardcoded in case this behavior changes
+# in the future
 [tool.tox.gh-actions]
 python = """
     3.8: py38
