--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ pyright = ['pyright >= 1.1.351']
 basic = [
     "types-html5lib ~= 1.1.11",
     "typing_extensions == 4.12.2; python_version < '3.13'",
-    "cssselect == 1.2.0",
+    "cssselect == 1.2.0; python_version < '3.9'",
+    "cssselect == 1.3.0; python_version >= '3.9'",
     "beautifulsoup4 == 4.13.3",
 ]
 mypy    = ["mypy == 1.11.2"]
