--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,26 +43,27 @@ homepage = 'https://github.com/abelcheung/types-lxml'
 [project.optional-dependencies]
 mypy = ['mypy ~= 1.11']
 pyright = ['pyright >= 1.1.351']
+basedpyright = ['basedpyright >= 1.4.0']
 
 # mostly pinned for tox testing except dev group
 [dependency-groups]
 basic = [
     "types-html5lib ~= 1.1.11",
     "typing_extensions == 4.12.2; python_version < '3.13'",
-    "cssselect == 1.2.0; python_version < '3.9'",
+    "cssselect == 1.2.0; python_version <= '3.8'",
     "cssselect == 1.3.0; python_version >= '3.9'",
     "beautifulsoup4 == 4.13.3",
 ]
-mypy    = ["mypy == 1.11.2"]
+mypy    = ["mypy == 1.15.0"]
 pyright = [
     # RobertCraigie/pyright-python/#318
-    "pyright == 1.1.396",
-    # 1.28 broke hypothesis the same way pyright 1.1.395 did
-    "basedpyright == 1.27.1",
+    "pyright == 1.1.397",
+    # 1.28.1 broke hypothesis the same way pyright 1.1.395 did
+    "basedpyright == 1.28.2",
 ]
 format  = ["ruff ~= 0.6"]
 stub-test = [
-    "pytest-mypy-plugins ~= 3.2; python_version > '3.8'",
+    "pytest-mypy-plugins == 3.2.0; python_version >= '3.9'",
     "pytest-mypy-plugins == 3.1.2; python_version <= '3.8'",
     {include-group = "mypy"},
 ]
@@ -70,9 +71,9 @@ rt-test = [
     "html5lib == 1.1",
     "pook == 2.1.3",
     "urllib3 == 2.3.0",
-    "hypothesis[zoneinfo] == 6.127.7",  # HypothesisWorks/hypothesis#4269
-    "pytest-revealtype-injector == 0.5.0",
-    "rnc2rng",
+    "hypothesis[zoneinfo] == 6.129.4",
+    "pytest-revealtype-injector == 0.5.1",
+    "rnc2rng == 2.7.0",
     {include-group = "mypy"},
     {include-group = "pyright"},
 ]
@@ -92,6 +93,7 @@ dev = [
     'pytest-revealtype-injector >= 0.5.0',
     'lxml >= 4.9',
     'rnc2rng',
+    # HypothesisWorks/hypothesis#4269
     'hypothesis[zoneinfo] >= 6.127.7',
     {include-group = "format"},
     {include-group = "basic"},
