--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,10 @@ basic = [
     "cssselect == 1.3.0; python_version >= '3.9'",
     "beautifulsoup4 == 4.13.3",
 ]
-mypy    = ["mypy == 1.15.0"]
+mypy    = [
+    "mypy == 1.15.0; python_version >= '3.9'",
+    "mypy == 1.14.0; python_version <= '3.8'",
+]
 pyright = [
     # RobertCraigie/pyright-python/#318
     "pyright == 1.1.397",
