feat: HtmlElement.text_content() result becomes plain str since lxml 6.0
Shouldn't break compatibility for users of prev versions, since the smart string property was completely noop for HtmlElement anyway

--- a/tests/static/test-html-element.yml
+++ b/tests/static/test-html-element.yml
@@ -111,7 +111,7 @@
     from lxml.html import HtmlElement
     elem: HtmlElement
     result = elem.text_content()
-    reveal_type(result)  # NR: Revealed type is "[\w\.]+\._ElementUnicodeResult\[[\w\.]+\.HtmlElement]"
+    reveal_type(result)  # N: Revealed type is "builtins.str"
     result = elem.text_content(None)  # E: Too many arguments for "text_content" of "HtmlElement"  [call-arg]
 
 - case: mixin_method_iterlinks
