--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,8 @@ lxml49 = ["lxml == 4.9.4"]
 lxml50 = ["lxml == 5.0.2"]
 lxml51 = ["lxml == 5.1.1"]
 lxml52 = ["lxml == 5.2.2"]
-lxml53 = ["lxml == 5.3.1"]
+lxml53 = ["lxml == 5.3.2"]
+lxml54 = ["lxml == 5.4.0"]
 dev = [
     'tox ~= 4.22',
     # microsoft/pyright#9412, microsoft/pyright#9984
@@ -235,17 +236,21 @@ runtime = [
     'py310-rt-lxml51',
     'py310-rt-lxml52',
     'py310-rt-lxml53',
+    'py310-rt-lxml54',
     'py311-rt-lxml49',
     'py311-rt-lxml50',
     'py311-rt-lxml51',
     'py311-rt-lxml52',
     'py311-rt-lxml53',
+    'py311-rt-lxml54',
     'py312-rt-lxml49',
     'py312-rt-lxml50',
     'py312-rt-lxml51',
     'py312-rt-lxml52',
     'py312-rt-lxml53',
+    'py312-rt-lxml54',
     'py313-rt-lxml53',
+    'py313-rt-lxml54',
 ]
 
 # HACK Taking advantage of tox-gh-actions using
@@ -327,6 +332,9 @@ dependency_groups = ['basic', 'rt-test', 'lxml52']
 [tool.tox._env_lxml53]
 dependency_groups = ['basic', 'rt-test', 'lxml53']
 
+[tool.tox._env_lxml54]
+dependency_groups = ['basic', 'rt-test', 'lxml54']
+
 [tool.tox.env]
 py38-stub  = {base = ['_env_stub']}
 py39-stub  = {base = ['_env_stub']}
@@ -339,17 +347,21 @@ py310-rt-lxml50 = {base = ['_env_rt', '_env_lxml50']}
 py310-rt-lxml51 = {base = ['_env_rt', '_env_lxml51']}
 py310-rt-lxml52 = {base = ['_env_rt', '_env_lxml52']}
 py310-rt-lxml53 = {base = ['_env_rt', '_env_lxml53']}
+py310-rt-lxml54 = {base = ['_env_rt', '_env_lxml54']}
 py311-rt-lxml49 = {base = ['_env_rt', '_env_lxml49']}
 py311-rt-lxml50 = {base = ['_env_rt', '_env_lxml50']}
 py311-rt-lxml51 = {base = ['_env_rt', '_env_lxml51']}
 py311-rt-lxml52 = {base = ['_env_rt', '_env_lxml52']}
 py311-rt-lxml53 = {base = ['_env_rt', '_env_lxml53']}
+py311-rt-lxml54 = {base = ['_env_rt', '_env_lxml54']}
 py312-rt-lxml49 = {base = ['_env_rt', '_env_lxml49']}
 py312-rt-lxml50 = {base = ['_env_rt', '_env_lxml50']}
 py312-rt-lxml51 = {base = ['_env_rt', '_env_lxml51']}
 py312-rt-lxml52 = {base = ['_env_rt', '_env_lxml52']}
 py312-rt-lxml53 = {base = ['_env_rt', '_env_lxml53']}
+py312-rt-lxml54 = {base = ['_env_rt', '_env_lxml54']}
 py313-rt-lxml53 = {base = ['_env_rt', '_env_lxml53']}
+py313-rt-lxml54 = {base = ['_env_rt', '_env_lxml54']}
 
 [tool.tox.env.build-normal]
 pass_env = ['PDM_BUILD_SCM_VERSION']
