--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,8 @@ basedpyright = ['basedpyright >= 1.4.0']
 # mostly pinned for tox testing except dev group
 [dependency-groups]
 basic = [
-    "types-html5lib ~= 1.1.11",
+    # pyright unhappy with 20250516 Incomplete change
+    "types-html5lib == 1.1.11.20241018",
     "typing_extensions == 4.12.2; python_version < '3.13'",
     "cssselect == 1.2.0; python_version <= '3.8'",
     "cssselect == 1.3.0; python_version >= '3.9'",
