--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     'typing_extensions ~= 4.10; python_version < "3.13"',
     'cssselect ~= 1.2',  # inline annotation
     'beautifulsoup4 ~= 4.13',  # inline annotation
-    'types-html5lib ~= 1.1.11, != 1.1.11.20250516',  # breaks pyright
+    # 1.1.11.20250516 breaks pyright
+    'types-html5lib ~= 1.1.11.20241018, != 1.1.11.20250516',
 ]
 keywords = ['lxml', 'typing', 'stubs', 'annotation']
 authors = [
@@ -48,14 +49,16 @@ basedpyright = ['basedpyright >= 1.4.0']
 # mostly pinned for tox testing except dev group
 [dependency-groups]
 basic = [
-    # pyright unhappy with 20250516 Incomplete change
-    "types-html5lib == 1.1.11.20250809",
-    "typing_extensions == 4.15.0; python_version < '3.13'",
+    'types-html5lib == 1.1.11.20241018; python_version <= "3.8"',
+    'types-html5lib == 1.1.11.20250809; python_version >= "3.9"',
+    'typing_extensions == 4.13.2; python_version == "3.8"',
+    'typing_extensions == 4.15.0; python_version >= "3.9" and python_version < "3.13"',
     "cssselect == 1.2.0; python_version <= '3.8'",
     "cssselect == 1.3.0; python_version >= '3.9'",
     "beautifulsoup4 == 4.13.5",
 ]
 mypy    = [
+    # 1.17 breaks union syntax
     "mypy == 1.16.1; python_version >= '3.9'",
     "mypy == 1.14.0; python_version <= '3.8'",
 ]
