--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -38,8 +38,7 @@ jobs:
           uvx
           --python-preference only-system
           --with tox-uv
-          tox@4.23.2
-          run-parallel -vv
+          tox run-parallel -vv
           -m typecheck
 
       - uses: peter-evans/create-pull-request@v7
