--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ name = 'types-lxml'
 dynamic = ['version']
 description = 'Complete lxml external type annotation'
 readme = 'README.md'
-requires-python = '>=3.8'
+requires-python = '>=3.9'
 license = 'Apache-2.0'
 license-files = ['LICENSE']
 dependencies = [
-    'typing_extensions ~= 4.10; python_version < "3.13"',
+    'typing_extensions ~= 4.15',
     'cssselect ~= 1.2',  # inline annotation
     'beautifulsoup4 ~= 4.13',  # inline annotation
     # 1.1.11.20250516 breaks pyright
-    'types-html5lib ~= 1.1.11.20241018, != 1.1.11.20250516',
+    'types-html5lib ~= 1.1.11.20250809',
 ]
 keywords = ['lxml', 'typing', 'stubs', 'annotation']
 authors = [
@@ -28,7 +28,6 @@ classifiers = [
     'Programming Language :: Python',
     'Intended Audience :: Developers',
     'Programming Language :: Python :: 3 :: Only',
-    'Programming Language :: Python :: 3.8',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
@@ -43,35 +42,28 @@ classifiers = [
 homepage = 'https://github.com/abelcheung/types-lxml'
 
 [project.optional-dependencies]
-mypy = ['mypy ~= 1.11']
-pyright = ['pyright >= 1.1.351']
-basedpyright = ['basedpyright >= 1.4.0']
+mypy = ['mypy >= 1.18.1']
+pyright = ['pyright >= 1.1.405']
+basedpyright = ['basedpyright >= 1.31.5']
 
 # mostly pinned for tox testing except dev group
 [dependency-groups]
 basic = [
-    'types-html5lib == 1.1.11.20241018; python_version <= "3.8"',
-    'types-html5lib == 1.1.11.20250809; python_version >= "3.9"',
-    'typing_extensions == 4.13.2; python_version == "3.8"',
-    'typing_extensions == 4.15.0; python_version >= "3.9" and python_version < "3.13"',
-    "cssselect == 1.2.0; python_version <= '3.8'",
-    "cssselect == 1.3.0; python_version >= '3.9'",
+    'types-html5lib == 1.1.11.20250809',
+    'typing_extensions == 4.15.0',
+    "cssselect == 1.3.0",
     "beautifulsoup4 == 4.13.5",
 ]
 mypy    = [
-    "mypy == 1.18.2; python_version >= '3.9'",
-    "mypy == 1.14.0; python_version <= '3.8'",
+    "mypy == 1.18.2",
 ]
 pyright = [
-    # RobertCraigie/pyright-python/#318
-    "pyright == 1.1.404",
-    # 1.28.1 broke hypothesis the same way pyright 1.1.395 did
-    "basedpyright == 1.31.3",
+    "pyright == 1.1.406",
+    "basedpyright == 1.31.7",
 ]
 format  = ["ruff ~= 0.6"]
 stub-test = [
-    "pytest-mypy-plugins == 3.2.0; python_version >= '3.9'",
-    "pytest-mypy-plugins == 3.1.2; python_version <= '3.8'",
+    "pytest-mypy-plugins == 3.2.0",
     {include-group = "mypy"},
 ]
 rt-test = [
@@ -92,14 +84,13 @@ lxml54 = ["lxml == 5.4.0"]
 lxml60 = ["lxml == 6.0.2"]
 dev = [
     'tox ~= 4.22',
-    'mypy >= 1.17.0',
-    # microsoft/pyright#9412, microsoft/pyright#9984
-    'pyright >=1.1.389,!=1.1.395',
-    'basedpyright >= 1.28.2',
+    'mypy >= 1.18.1',
+    'pyright >=1.1.405',
+    'basedpyright >= 1.31.5',
     'html5lib == 1.1',
     'pook >= 2.0',
     'urllib3 >= 2.0',
-    'pytest-mypy-plugins >= 2.0',
+    'pytest-mypy-plugins >= 3.2.0',
     'pytest-revealtype-injector >= 0.5.0',
     'lxml >= 5.0',
     'rnc2rng',
@@ -229,7 +220,6 @@ typecheck = [
     'mypy',
 ]
 static = [
-    'py38-stub',
     'py39-stub',
     'py310-stub',
     'py311-stub',
@@ -270,7 +260,6 @@ runtime = [
 # in the future
 [tool.tox.gh-actions]
 python = """
-    3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
@@ -355,7 +344,6 @@ dependency_groups = ['basic', 'rt-test', 'lxml54']
 dependency_groups = ['basic', 'rt-test', 'lxml60']
 
 [tool.tox.env]
-py38-stub  = {base = ['_env_stub']}
 py39-stub  = {base = ['_env_stub']}
 py310-stub = {base = ['_env_stub']}
 py311-stub = {base = ['_env_stub']}
